--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 attrs==25.3.0
 certifi==2025.8.3
 coloredlogs==15.0.1
+colorlog==6.9.0
 frozenlist==1.7.0
 greenlet==3.2.4
 humanfriendly==10.0
